--- a/src/main/resources/com/example/practica_v1/hello-view.fxml
+++ b/src/main/resources/com/example/practica_v1/hello-view.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorID" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="1337.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica_v1.HelloController">
+<AnchorPane fx:id="anchorID" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="763.0" prefWidth="1337.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practica_v1.HelloController">
    <children>
       <AnchorPane layoutX="252.0" layoutY="87.0" prefHeight="382.0" prefWidth="1058.0" style="-fx-background-color: c3c3c3;">
          <children>
@@ -44,5 +47,17 @@
          </font>
       </Label>
       <Label layoutX="21.0" layoutY="356.0" text="Progress" />
+      <Line endX="1211.2857666015625" layoutX="115.0" layoutY="494.0" startX="-100.0" />
+      <ColorPicker fx:id="colorPicker1" layoutX="53.0" layoutY="535.0">
+         <value>
+            <Color red="0.8947368264198303" green="0.47103869915008545" blue="0.47103869915008545" />
+         </value></ColorPicker>
+      <ColorPicker fx:id="colorPicker2" layoutX="245.0" layoutY="535.0">
+         <value>
+            <Color red="0.5338345766067505" />
+         </value>
+      </ColorPicker>
+      <Label layoutX="26.0" layoutY="506.0" text="Начальный цвет распознования" />
+      <Label layoutX="221.0" layoutY="506.0" text="Конечный цвет распознования" />
    </children>
 </AnchorPane>
