--- a/src/main/resources/com/example/practica_v1/hello-view.fxml
+++ b/src/main/resources/com/example/practica_v1/hello-view.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -48,17 +49,11 @@
       </Label>
       <Label layoutX="21.0" layoutY="356.0" text="Progress" />
       <Line endX="1211.2857666015625" layoutX="115.0" layoutY="494.0" startX="-100.0" />
-      <ColorPicker fx:id="colorPicker1" layoutX="53.0" layoutY="535.0">
+      <ColorPicker fx:id="colorPicker1" disable="true" layoutX="263.0" layoutY="535.0">
          <value>
             <Color red="0.8947368264198303" green="0.47103869915008545" blue="0.47103869915008545" />
          </value></ColorPicker>
-      <ColorPicker fx:id="colorPicker2" layoutX="245.0" layoutY="535.0">
-         <value>
-            <Color red="0.5338345766067505" />
-         </value>
-      </ColorPicker>
-      <Label layoutX="26.0" layoutY="506.0" text="Начальный цвет распознования" />
-      <Label layoutX="221.0" layoutY="506.0" text="Конечный цвет распознования" />
+      <Label fx:id="labelColor" layoutX="246.0" layoutY="506.0" text="Выбор цвета распознования" />
       <TextField fx:id="dpTextField" layoutX="447.0" layoutY="535.0" prefHeight="25.0" prefWidth="46.0" text="1" />
       <Label layoutX="447.0" layoutY="506.0" text="dp" />
       <TextField fx:id="minDistTextField" layoutX="529.0" layoutY="535.0" prefHeight="25.0" prefWidth="46.0" text="8" />
@@ -75,5 +70,9 @@
       <Line endX="115.14285278320312" endY="-1.6428680419921875" layoutX="129.0" layoutY="67.0" startX="-113.42855834960938" startY="-1.6428680419921875" />
       <Line endX="-98.92855834960938" endY="-194.1428680419922" layoutX="115.0" layoutY="261.0" startX="-98.92855834960938" startY="-28.499984741210938" />
       <Line endX="97.64285278320312" endY="-202.1428680419922" layoutX="147.0" layoutY="267.0" startX="97.50003051757812" startY="-34.49998474121094" />
+      <RadioButton fx:id="RButColor" layoutX="35.0" layoutY="539.0" mnemonicParsing="false" selected="true" text="Автоматический красный цвет" />
+      <Label layoutX="252.0" layoutY="588.0" text="Погрешность" />
+      <TextField fx:id="DeltaTextField" disable="true" layoutX="347.0" layoutY="584.0" prefHeight="25.0" prefWidth="46.0" text="50" />
+      <Button fx:id="ButSettingsDefalt" layoutX="1059.0" layoutY="535.0" mnemonicParsing="false" text="Настройки по умолчанию" />
    </children>
 </AnchorPane>
