--- a/src/main/resources/com/example/practica_v1/hello-view.fxml
+++ b/src/main/resources/com/example/practica_v1/hello-view.fxml
@@ -54,18 +54,18 @@
             <Color red="0.8947368264198303" green="0.47103869915008545" blue="0.47103869915008545" />
          </value></ColorPicker>
       <Label fx:id="labelColor" layoutX="246.0" layoutY="506.0" text="Выбор цвета распознования" />
-      <TextField fx:id="dpTextField" layoutX="447.0" layoutY="535.0" prefHeight="25.0" prefWidth="46.0" text="1" />
-      <Label layoutX="447.0" layoutY="506.0" text="dp" />
-      <TextField fx:id="minDistTextField" layoutX="529.0" layoutY="535.0" prefHeight="25.0" prefWidth="46.0" text="8" />
-      <Label layoutX="529.0" layoutY="506.0" text="MinDist" />
-      <TextField fx:id="param1TextField" layoutX="610.0" layoutY="535.0" prefHeight="25.0" prefWidth="56.0" text="100" />
-      <Label layoutX="610.0" layoutY="506.0" text="param1" />
-      <TextField fx:id="param2TextField" layoutX="702.0" layoutY="535.0" prefHeight="25.0" prefWidth="56.0" text="15" />
-      <Label layoutX="702.0" layoutY="506.0" text="param2" />
-      <TextField fx:id="minRadiusTextField" layoutX="788.0" layoutY="535.0" prefHeight="25.0" prefWidth="56.0" text="300" />
-      <Label layoutX="788.0" layoutY="506.0" text="minRadius" />
-      <TextField fx:id="maxRadiusTextField" layoutX="876.0" layoutY="535.0" prefHeight="25.0" prefWidth="56.0" text="400" />
-      <Label layoutX="876.0" layoutY="506.0" text="maxRadius" />
+      <TextField fx:id="dpTextField" layoutX="489.0" layoutY="535.0" prefHeight="25.0" prefWidth="46.0" text="1" />
+      <Label layoutX="447.0" layoutY="506.0" text="Разрешение сумматора" />
+      <TextField fx:id="minDistTextField" layoutX="645.0" layoutY="537.0" prefHeight="25.0" prefWidth="46.0" text="8" />
+      <Label layoutX="594.0" layoutY="506.0" text="Мин раст между центрами" />
+      <TextField fx:id="param1TextField" layoutX="773.0" layoutY="537.0" prefHeight="25.0" prefWidth="56.0" text="100" />
+      <Label layoutX="781.0" layoutY="506.0" text="param1" />
+      <TextField fx:id="param2TextField" layoutX="863.0" layoutY="537.0" prefHeight="25.0" prefWidth="56.0" text="15" />
+      <Label layoutX="869.0" layoutY="506.0" text="param2" />
+      <TextField fx:id="minRadiusTextField" layoutX="955.0" layoutY="537.0" prefHeight="25.0" prefWidth="56.0" text="300" />
+      <Label layoutX="955.0" layoutY="506.0" text="minRadius" />
+      <TextField fx:id="maxRadiusTextField" layoutX="1044.0" layoutY="537.0" prefHeight="25.0" prefWidth="56.0" text="400" />
+      <Label layoutX="1043.0" layoutY="506.0" text="maxRadius" />
       <Line endX="123.00003051757812" endY="1.52587890625E-5" layoutX="121.0" layoutY="233.0" startX="-104.42855834960938" startY="1.52587890625E-5" />
       <Line endX="115.14285278320312" endY="-1.6428680419921875" layoutX="129.0" layoutY="67.0" startX="-113.42855834960938" startY="-1.6428680419921875" />
       <Line endX="-98.92855834960938" endY="-194.1428680419922" layoutX="115.0" layoutY="261.0" startX="-98.92855834960938" startY="-28.499984741210938" />
@@ -73,6 +73,6 @@
       <RadioButton fx:id="RButColor" layoutX="35.0" layoutY="539.0" mnemonicParsing="false" selected="true" text="Автоматический красный цвет" />
       <Label layoutX="252.0" layoutY="588.0" text="Погрешность" />
       <TextField fx:id="DeltaTextField" disable="true" layoutX="347.0" layoutY="584.0" prefHeight="25.0" prefWidth="46.0" text="50" />
-      <Button fx:id="ButSettingsDefalt" layoutX="1059.0" layoutY="535.0" mnemonicParsing="false" text="Настройки по умолчанию" />
+      <Button fx:id="ButSettingsDefalt" layoutX="1150.0" layoutY="535.0" mnemonicParsing="false" text="Настройки по умолчанию" />
    </children>
 </AnchorPane>
